force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/SOLXYZCSO001__ReportDeliveryTemplate__c.object-meta.xml
<CustomObject>
    <description>Manage the mapping of Field</description>
    <label>帳票配信通知テンプレート</label>
    <nameField>
        <label>テンプレート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>