force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/fields/SOLXYZCSO001__ReportDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>帳票定義</label>
    <referenceTo>SOLXYZCSO001__ReportDefinition__c</referenceTo>
    <relationshipLabel>配信通知テンプレート</relationshipLabel>
    <relationshipName>ReportDeliveryTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>