force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/fields/SOLXYZCSO001__ReportDefinitionObjectName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinitionObjectName__c</fullName>
    <label>帳票定義オブジェクト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>