force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/fields/SOLXYZCSO001__TemplatePasswordBody__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__TemplatePasswordBody__c</fullName>
    <description>パスワード通知本文</description>
    <label>パスワード通知本文</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>