force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/fields/SOLXYZCSO001__TemplatePasswordSubject__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__TemplatePasswordSubject__c</fullName>
    <description>パスワード通知件名</description>
    <label>パスワード通知件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>