force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryTemplate__c/fields/SOLXYZCSO001__TemplateUrlSubject__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__TemplateUrlSubject__c</fullName>
    <description>ダウンロードURL通知件名</description>
    <label>ダウンロードURL通知件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>